dist/objects/Cohort__c.object
<CustomObject>
    <description>A group of pupils and tutors (engagements) at a school assigned to a particular subject over a period of time. 

Oscar Mawby @ Impact Box 11/12/19</description>
    <fields>
        <fullName>AP_LAC_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if a given cohort comes under the AP / LAC department</description>
        <label>AP / LAC Cohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcademicYear__c</fullName>
        <formula>TEXT( SubjectYearKPI__r.AcademicYear__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The assignment the cohort belongs to

Oscar Mawby @ Impact Box 11/12/19</description>
        <inlineHelpText>Being replaced by Opportunity</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutumnHalfTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Autumn Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnHalfTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Autumn Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Autumn Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 20/12/19</description>
        <label>Autumn Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CityArea__c</fullName>
        <formula>Opportunity__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City/Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CohortMigrationNumber__c</fullName>
        <description>Built for purposes of data migration, Oscar Mawby @ Impact box 22/01/20</description>
        <label>Cohort Migration Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CohortName__c</fullName>
        <formula>LEFT( Opportunity__r.Account.Name ,40) &amp; &quot;, &quot; &amp; TEXT( Subject__c ) &amp; &quot;, &quot; &amp;  TEXT(SchoolYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cohort Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountReasonDetail__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <label>Discount Reason Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, 03/08/2020</description>
        <inlineHelpText>This will be applied to every Payment related to this Cohort</inlineHelpText>
        <label>Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 11/12/19</description>
        <inlineHelpText>The date the last session is scheduled for</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funder</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Funder must be a School or Funder account</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>&apos;Funder_Corporate&apos;, &apos;School&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIAttendance__c</fullName>
        <formula>SubjectYearKPI__r.AttendanceKPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Attendance %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KeyStage__c</fullName>
        <formula>IF(

 OR( ISPICKVAL( SchoolYear__c , &apos;5&apos;), ISPICKVAL( SchoolYear__c , &apos;6&apos;)), &apos;KS2&apos;,

IF(

 OR( ISPICKVAL( SchoolYear__c , &apos;7&apos;), ISPICKVAL( SchoolYear__c , &apos;8&apos;),ISPICKVAL( SchoolYear__c , &apos;9&apos;)), &apos;KS3&apos;,

IF(

 OR( ISPICKVAL( SchoolYear__c , &apos;10&apos;), ISPICKVAL( SchoolYear__c , &apos;11&apos;)), &apos;KS4&apos;,

&apos;INVALID SCHOOL YEAR&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a record as Migrated from legacy systems. Oscar Mawby @ Impact box 22/01/20</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofPupils__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Number of Pupils</label>
        <summaryFilterItems>
            <field>Engagement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil, KS2 Pupil, KS3 Pupil, KS4 Pupil</value>
        </summaryFilterItems>
        <summaryForeignKey>Engagement__c.Cohort__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofTutors__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Number of Tutors</label>
        <summaryFilterItems>
            <field>Engagement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tutor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Engagement__c.CoverTutor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Engagement__c.EngagementStatus__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Engagement__c.Cohort__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Online_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Cohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PupilAttendancePerc__c</fullName>
        <formula>TotalPupilAttendances__c

/

(TotalPupilAbsences__c +  TotalPupilAttendances__c )</formula>
        <label>Pupil Attendance %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecordIDDataUpload__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cohort ID For Upload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Angle_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right Angle Cohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolChargePerTutoringHour__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <label>School Charge Per Tutoring Hour</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SchoolID__c</fullName>
        <formula>CASESAFEID( Opportunity__r.AccountId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School ID For Upload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <formula>Opportunity__r.School__r.Name</formula>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <formula>CASE( SchoolYear__c,

&apos;5&apos;, &apos;Primary&apos;,

&apos;6&apos;, &apos;Primary&apos;,

&apos;7&apos;, &apos;Secondary&apos;,

&apos;8&apos;, &apos;Secondary&apos;,

&apos;9&apos;, &apos;Secondary&apos;,

&apos;10&apos;, &apos;Secondary&apos;,

&apos;11&apos;, &apos;Secondary&apos;,

Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on School Year</inlineHelpText>
        <label>School Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolYear__c</fullName>
        <description>The School Year of this cohort 

Oscar Mawby @ Impact Box 13/12/19</description>
        <label>School Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpringHalfTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Spring Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringHalfTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Spring Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Spring Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Spring Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 11/12/19</description>
        <inlineHelpText>The date the first session is due to start</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubjectYearKPI__c</fullName>
        <description>The relevant KPI for this cohort to be compared against

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>The relevant KPIs for this cohort to be compared against</inlineHelpText>
        <label>Subject Year</label>
        <referenceTo>SubjectYearKPI__c</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Oscar Mawby @ Impact Box 11/12/19</description>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummerHalfTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Summer Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerHalfTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Summer Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerTermEnd__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Summer Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerTermStart__c</fullName>
        <description>Oscar Mawby @ Impact Box 19/12/19</description>
        <label>Summer Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetPopulationNum__c</fullName>
        <description>Oscar Mawby @ Impact Box 16/12/19</description>
        <inlineHelpText>Number in Cohort population that are are either in receipt of pupil premium (PP), a looked after child (LAC), or in alternative provision (AP).</inlineHelpText>
        <label>Target Population #</label>
        <summaryFilterItems>
            <field>Engagement__c.TargetPopulation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Engagement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil, KS2 Pupil, KS3 Pupil, KS4 Pupil</value>
        </summaryFilterItems>
        <summaryForeignKey>Engagement__c.Cohort__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TargetPopulationPerc__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <formula>TargetPopulationNum__c / NumberofPupils__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of pupils in this Cohort that are either in receipt of pupil premium (PP), a looked after child (LAC), or in alternative provision (AP).</inlineHelpText>
        <label>Target Population %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPupilAbsences__c</fullName>
        <description>Counts the number of Pupil Absences

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>Counts the number of Pupil Absences</inlineHelpText>
        <label>Total Pupil Absences</label>
        <summarizedField>Session__c.PupilAbsences__c</summarizedField>
        <summaryForeignKey>Session__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPupilAttendances__c</fullName>
        <description>Will count the number of pupils that have attended sessions. 

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>Counts the number of pupils that have attended sessions</inlineHelpText>
        <label>Total Pupil Attendances</label>
        <summarizedField>Session__c.PupilAttendances__c</summarizedField>
        <summaryForeignKey>Session__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPupilDosage__c</fullName>
        <description>Sums the total hours students have spent in sessions

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>Sums the total hours students have spent in sessions</inlineHelpText>
        <label>Total Pupil Dosage</label>
        <summarizedField>Session__c.TotalPupilDosage__c</summarizedField>
        <summaryForeignKey>Session__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSessions__c</fullName>
        <description>Total number of sessions that have happened and scheduled within this cohort, will not count cancelled sessions. 

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>Total number of sessions that have happened and scheduled within this cohort, will not count cancelled sessions.</inlineHelpText>
        <label>Total # Sessions</label>
        <summaryFilterItems>
            <field>Session__c.SessionCancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Session__c.Cohort__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NumberofPupils__c</columns>
        <columns>AutumnHalfTermEnd__c</columns>
        <columns>Assignment__c</columns>
        <columns>SubjectYearKPI__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Funder__c</columns>
        <columns>SchoolChargePerTutoringHour__c</columns>
        <columns>NumberofTutors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DiscountPercRequiresReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

NOT(ISBLANK( Discount__c )),

ISBLANK(DiscountReasonDetail__c ))</errorConditionFormula>
        <errorDisplayField>DiscountReasonDetail__c</errorDisplayField>
        <errorMessage>Please provide a reason for the discount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TermDateGreaterThanPrevious</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

 AutumnTermStart__c  &gt;  AutumnHalfTermStart__c ,

 AutumnHalfTermEnd__c  &gt; AutumnTermEnd__c,

SpringTermStart__c &gt; SpringHalfTermStart__c,

SpringHalfTermEnd__c &gt; SpringTermEnd__c,

SummerTermStart__c &gt; SummerHalfTermStart__c,

SummerHalfTermEnd__c &gt; SummerTermEnd__c

)</errorConditionFormula>
        <errorMessage>You have input a term date greater than the previous term date, please check the term dates.</errorMessage>
    </validationRules>
</CustomObject>